@@ -3,7 +3,7 @@
 # This script executes a performance test w/ Hbase 0.96.1.1-hadoop2.  It is
 # an example of how you can setup a script to run an Hbase job.  It is
 # set via the HBASE_SCRIPT_PATH environment variable and setting the
-# HBASE_MODE to 'script'.  See the magpie.sbatch file for details.
+# HBASE_MODE to 'script'.  See the job submission file for details.
 #
 # Please adjust to whatever you would want to do with Hbase
 
